--- a/index.html
+++ b/index.html
@@ -10,18 +10,37 @@
     <div class="contener">
         <header>
             <!-- Ici c'est une zone avec deux images ... -->
-            <h1>Titre</h1>
+            <h1>
+                <a href="#">Colored Design</a>
+            </h1>
 
             <!-- Ici c'est une zone avec la nav ... -->
             <nav>
-                <p>mettre les items</p>
+                <ul>
+                    <li><a href="#">Etape 1</a></li>
+                    <li><a href="#">Etape 2</a></li>
+                    <li><a href="#">Etape 3</a></li>
+                    <li><a href="#">Etape 4</a></li>
+                    <li><a href="#">Etape 5</a></li>
+                </ul>
             </nav>
         </header>
 
-        
         <main>
             <!-- Ici c'est le texte avec titres ... -->
+             <h2>Titre</h2>
+            <p>Lorem ipsum dolor <mark>sit amet, consectetur adipisicing elit, sed do eiusmod tempor</mark> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+            <p>Lorem ipsum dolor <mark>sit amet, consectetur adipisicing elit, sed do eiusmod tempor</mark> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+
+            <h3>Sous-titre</h3>
+            <p>Lorem ipsum dolor <mark>sit amet, consectetur adipisicing elit, sed do eiusmod tempor</mark> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
+            <p>Lorem ipsum dolor <mark>sit amet, consectetur adipisicing elit, sed do eiusmod tempor</mark> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</span>
         </main>
+        <footer>Site à tester et utiliser !!!</footer>
     </div>
 </body>
 </html>
